fix(frontend): add css formatting for gurmukhi
gurmukhi is broken into "word" spans which cannot play properly with justify text-align

--- a/app/frontend/src/Presenter/Line.css
+++ b/app/frontend/src/Presenter/Line.css
@@ -21,6 +21,14 @@
 .line.center-text.justify-text {
   text-align-last: center;
 }
+
+.line.justify-text .gurmukhi {
+  text-align: left;
+  text-align-last: left;
+}
+
+.line.center-text.justify-text .gurmukhi {
+  text-align: center;
   text-align-last: center;
 }
 
@@ -79,8 +87,12 @@
   display: inline-block;
 }
 
-.partition + .partition:before {
+.partition:after {
   content: "\200B\20"
+}
+
+.partition:last-child:after {
+  content: ""
 }
 
 .line .gurmukhi .word:after,
